--- a/main.yml
+++ b/main.yml
@@ -2,11 +2,10 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - master
+    branches: [main]
 
 jobs:
-  build-and-deploy:
+  docker-build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,15 +16,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-portfolio:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-project2:latest .
 
-    - name: Push to DockerHub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/devops-portfolio:latest
-
-    - name: Set up kubectl
-      uses: azure/setup-kubectl@v3
-
-    - name: Deploy to Kubernetes
-      run: |
-        kubectl apply -f k8s/deployment.yaml
-        kubectl apply -f k8s/service.yaml
+    - name: Push Docker image to DockerHub
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/devops-project2:latest
